--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Map & Directions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
 
   </head>
 
